T1/src/t1/LuaParser.java
// Generated from D:\Documentos\GitHub\Trab_comp1\T1\src\t1\Lua.g4 by ANTLR 4.1

   package t1; 

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LuaParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__46=1, T__45=2, T__44=3, T__43=4, T__42=5, T__41=6, T__40=7, T__39=8, 
		T__38=9, T__37=10, T__36=11, T__35=12, T__34=13, T__33=14, T__32=15, T__31=16, 
		T__30=17, T__29=18, T__28=19, T__27=20, T__26=21, T__25=22, T__24=23, 
		T__23=24, T__22=25, T__21=26, T__20=27, T__19=28, T__18=29, T__17=30, 
		T__16=31, T__15=32, T__14=33, T__13=34, T__12=35, T__11=36, T__10=37, 
		T__9=38, T__8=39, T__7=40, T__6=41, T__5=42, T__4=43, T__3=44, T__2=45, 
		T__1=46, T__0=47, VARNAME=48, COMMENT=49, REALNUM=50, BLANK=51, STRING=52, 
		FIELDSEP=53;
	public static final String[] tokenNames = {
		"<INVALID>", "'/'", "'elseif'", "'true'", "'return'", "'{'", "'while'", 
		"';'", "'..'", "'}'", "'='", "'^'", "'for'", "'if'", "'<='", "'break'", 
		"'local'", "'('", "'do'", "'*'", "','", "'repeat'", "'false'", "'.'", 
		"'...'", "':'", "'>='", "'['", "'~='", "'=='", "'<'", "']'", "'>'", "'or'", 
		"'until'", "'#'", "'%'", "'in'", "'else'", "'function'", "'end'", "')'", 
		"'and'", "'nil'", "'+'", "'then'", "'not'", "'-'", "VARNAME", "COMMENT", 
		"REALNUM", "BLANK", "STRING", "FIELDSEP"
	};
	public static final int
		RULE_programa = 0, RULE_block = 1, RULE_chunk = 2, RULE_stat = 3, RULE_laststat = 4, 
		RULE_funcname = 5, RULE_varlist = 6, RULE_var = 7, RULE_namelist = 8, 
		RULE_explist = 9, RULE_exp = 10, RULE_expa = 11, RULE_prefixexp = 12, 
		RULE_prefixexpa = 13, RULE_functioncall = 14, RULE_args = 15, RULE_function = 16, 
		RULE_funcbody = 17, RULE_parlist = 18, RULE_tableconstructor = 19, RULE_fieldlist = 20, 
		RULE_field = 21, RULE_binop = 22, RULE_unop = 23;
	public static final String[] ruleNames = {
		"programa", "block", "chunk", "stat", "laststat", "funcname", "varlist", 
		"var", "namelist", "explist", "exp", "expa", "prefixexp", "prefixexpa", 
		"functioncall", "args", "function", "funcbody", "parlist", "tableconstructor", 
		"fieldlist", "field", "binop", "unop"
	};

	@Override
	public String getGrammarFileName() { return "Lua.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }


	   public static String grupo="558303 - 558273";

	public LuaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramaContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48); block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public ChunkContext chunk() {
			return getRuleContext(ChunkContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50); chunk();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChunkContext extends ParserRuleContext {
		public LaststatContext laststat() {
			return getRuleContext(LaststatContext.class,0);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public ChunkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chunk; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).enterChunk(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).exitChunk(this);
		}
	}

	public final ChunkContext chunk() throws RecognitionException {
		ChunkContext _localctx = new ChunkContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_chunk);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 6) | (1L << 12) | (1L << 13) | (1L << 16) | (1L << 17) | (1L << 18) | (1L << 21) | (1L << 39) | (1L << VARNAME))) != 0)) {
				{
				{
				setState(52); stat();
				setState(54);
				_la = _input.LA(1);
				if (_la==7) {
					{
					setState(53); match(7);
					}
				}

				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(65);
			_la = _input.LA(1);
			if (_la==4 || _la==15) {
				{
				setState(61); laststat();
				setState(63);
				_la = _input.LA(1);
				if (_la==7) {
					{
					setState(62); match(7);
					}
				}

				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public FuncnameContext funcname;
		public Token VARNAME;
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public VarlistContext varlist() {
			return getRuleContext(VarlistContext.class,0);
		}
		public FuncnameContext funcname() {
			return getRuleContext(FuncnameContext.class,0);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public ExplistContext explist() {
			return getRuleContext(ExplistContext.class,0);
		}
		public NamelistContext namelist() {
			return getRuleContext(NamelistContext.class,0);
		}
		public FuncbodyContext funcbody() {
			return getRuleContext(FuncbodyContext.class,0);
		}
		public FunctioncallContext functioncall() {
			return getRuleContext(FunctioncallContext.class,0);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public TerminalNode VARNAME() { return getToken(LuaParser.VARNAME, 0); }
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).exitStat(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stat);
		int _la;
		try {
			setState(145);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(67); varlist();
				setState(68); match(10);
				setState(69); explist();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(71); functioncall();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(72); match(18);
				setState(73); block();
				setState(74); match(40);
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(76); match(6);
				setState(77); exp();
				setState(78); match(18);
				setState(79); block();
				setState(80); match(40);
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(82); match(21);
				setState(83); block();
				setState(84); match(34);
				setState(85); exp();
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(87); match(13);
				setState(88); exp();
				setState(89); match(45);
				setState(90); block();
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==2) {
					{
					{
					setState(91); match(2);
					setState(92); exp();
					setState(93); match(45);
					setState(94); block();
					}
					}
					setState(100);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(103);
				_la = _input.LA(1);
				if (_la==38) {
					{
					setState(101); match(38);
					setState(102); block();
					}
				}

				setState(105); match(40);
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(107); match(12);
				setState(108); match(VARNAME);
				setState(109); match(10);
				setState(110); exp();
				setState(111); match(20);
				setState(112); exp();
				setState(115);
				_la = _input.LA(1);
				if (_la==20) {
					{
					setState(113); match(20);
					setState(114); exp();
					}
				}

				setState(117); match(18);
				setState(118); block();
				setState(119); match(40);
				}
				break;

			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(121); match(12);
				setState(122); namelist();
				setState(123); match(37);
				setState(124); explist();
				setState(125); match(18);
				setState(126); block();
				setState(127); match(40);
				}
				break;

			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(129); match(39);
				setState(130); ((StatContext)_localctx).funcname = funcname();
				 TabelaDeSimbolos.adicionarSimbolo((((StatContext)_localctx).funcname!=null?_input.getText(((StatContext)_localctx).funcname.start,((StatContext)_localctx).funcname.stop):null),Tipo.FUNCAO); 
				setState(132); funcbody();
				}
				break;

			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(134); match(16);
				setState(135); match(39);
				setState(136); ((StatContext)_localctx).VARNAME = match(VARNAME);
				 TabelaDeSimbolos.adicionarSimbolo((((StatContext)_localctx).VARNAME!=null?((StatContext)_localctx).VARNAME.getText():null),Tipo.FUNCAO); 
				setState(138); funcbody();
				}
				break;

			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(139); match(16);
				setState(140); namelist();
				setState(143);
				_la = _input.LA(1);
				if (_la==10) {
					{
					setState(141); match(10);
					setState(142); explist();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LaststatContext extends ParserRuleContext {
		public ExplistContext explist() {
			return getRuleContext(ExplistContext.class,0);
		}
		public LaststatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_laststat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).enterLaststat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).exitLaststat(this);
		}
	}

	public final LaststatContext laststat() throws RecognitionException {
		LaststatContext _localctx = new LaststatContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_laststat);
		int _la;
		try {
			setState(152);
			switch (_input.LA(1)) {
			case 4:
				enterOuterAlt(_localctx, 1);
				{
				setState(147); match(4);
				setState(149);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 3) | (1L << 5) | (1L << 17) | (1L << 22) | (1L << 24) | (1L << 35) | (1L << 39) | (1L << 43) | (1L << 46) | (1L << 47) | (1L << VARNAME) | (1L << REALNUM) | (1L << STRING))) != 0)) {
					{
					setState(148); explist();
					}
				}

				}
				break;
			case 15:
				enterOuterAlt(_localctx, 2);
				{
				setState(151); match(15);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncnameContext extends ParserRuleContext {
		public TerminalNode VARNAME(int i) {
			return getToken(LuaParser.VARNAME, i);
		}
		public List<TerminalNode> VARNAME() { return getTokens(LuaParser.VARNAME); }
		public FuncnameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcname; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).enterFuncname(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).exitFuncname(this);
		}
	}

	public final FuncnameContext funcname() throws RecognitionException {
		FuncnameContext _localctx = new FuncnameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcname);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154); match(VARNAME);
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==23) {
				{
				{
				setState(155); match(23);
				setState(156); match(VARNAME);
				}
				}
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(164);
			_la = _input.LA(1);
			if (_la==25) {
				{
				setState(162); match(25);
				setState(163); match(VARNAME);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarlistContext extends ParserRuleContext {
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public VarlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).enterVarlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).exitVarlist(this);
		}
	}

	public final VarlistContext varlist() throws RecognitionException {
		VarlistContext _localctx = new VarlistContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varlist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166); var();
			setState(171);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==20) {
				{
				{
				setState(167); match(20);
				setState(168); var();
				}
				}
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarContext extends ParserRuleContext {
		public Token VARNAME;
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public PrefixexpContext prefixexp() {
			return getRuleContext(PrefixexpContext.class,0);
		}
		public TerminalNode VARNAME() { return getToken(LuaParser.VARNAME, 0); }
		public VarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).enterVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).exitVar(this);
		}
	}

	public final VarContext var() throws RecognitionException {
		VarContext _localctx = new VarContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_var);
		try {
			setState(185);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(174); ((VarContext)_localctx).VARNAME = match(VARNAME);
				 TabelaDeSimbolos.adicionarSimbolo((((VarContext)_localctx).VARNAME!=null?((VarContext)_localctx).VARNAME.getText():null),Tipo.VARIAVEL); 
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(176); prefixexp();
				setState(177); match(27);
				setState(178); exp();
				setState(179); match(31);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(181); prefixexp();
				setState(182); match(23);
				setState(183); match(VARNAME);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamelistContext extends ParserRuleContext {
		public Token VARNAME;
		public TerminalNode VARNAME(int i) {
			return getToken(LuaParser.VARNAME, i);
		}
		public List<TerminalNode> VARNAME() { return getTokens(LuaParser.VARNAME); }
		public NamelistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namelist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).enterNamelist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).exitNamelist(this);
		}
	}

	public final NamelistContext namelist() throws RecognitionException {
		NamelistContext _localctx = new NamelistContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_namelist);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(187); ((NamelistContext)_localctx).VARNAME = match(VARNAME);
			 TabelaDeSimbolos.adicionarSimbolo((((NamelistContext)_localctx).VARNAME!=null?((NamelistContext)_localctx).VARNAME.getText():null),Tipo.VARIAVEL); 
			setState(194);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(189); match(20);
					setState(190); ((NamelistContext)_localctx).VARNAME = match(VARNAME);
					 TabelaDeSimbolos.adicionarSimbolo((((NamelistContext)_localctx).VARNAME!=null?((NamelistContext)_localctx).VARNAME.getText():null),Tipo.VARIAVEL); 
					}
					} 
				}
				setState(196);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExplistContext extends ParserRuleContext {
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public ExplistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_explist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).enterExplist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).exitExplist(this);
		}
	}

	public final ExplistContext explist() throws RecognitionException {
		ExplistContext _localctx = new ExplistContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_explist);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(202);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(197); exp();
					setState(198); match(20);
					}
					} 
				}
				setState(204);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			}
			setState(205); exp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public PrefixexpContext prefixexp() {
			return getRuleContext(PrefixexpContext.class,0);
		}
		public ExpaContext expa() {
			return getRuleContext(ExpaContext.class,0);
		}
		public TerminalNode REALNUM() { return getToken(LuaParser.REALNUM, 0); }
		public TableconstructorContext tableconstructor() {
			return getRuleContext(TableconstructorContext.class,0);
		}
		public TerminalNode STRING() { return getToken(LuaParser.STRING, 0); }
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public UnopContext unop() {
			return getRuleContext(UnopContext.class,0);
		}
		public ExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).enterExp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LuaListener ) ((LuaListener)listener).exitExp(this);
		}
	}

	public final ExpContext exp() throws RecognitionException {
		ExpContext _localctx = new ExpContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_exp);
		try {
			setState(244);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(207); match(43);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(208); match(22);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(209); match(3);
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(210); match(REALNUM);
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(211); match(STRING);
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(212); match(24);
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(213); function();
				}
				break;

			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(214); prefixexp();
				}
				break;

			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(215); tableconstructor();
				}
				break;

			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(216); unop();
				setState(217); exp();
				}
				break;

			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(219); match(43);
				setState(220); expa();
				}
				break;

			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(221); match(22);
				setState(222); expa();
				}
				break;

			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(223); match(3);
				setState(224); expa();
				}
				break;

			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(225); match(REALNUM);
				setState(226); expa();
				}
				break;

			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(227); match(STRING);
				setState(228); expa();
				}
				break;

			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(229); match(24);
				setState(230); expa();
				}
				break;
